<resources>

    <string name="app_name">Pickr</string>
    <string name="menu_add_folder">Add folder</string>
    <string name="menu_select_folder">Select folder</string>
    <string name="menu_dismiss_folder">Dismiss</string>
    
    <string name="settings_title_active">Active</string>
    <string name="settings_title_dropbox">Dropbox</string>
    <string name="settings_title_google">Google</string>
    <string name="settings_title_configured_paths">Configured paths</string>
    
    <string name="settings_description_active">Should the app pick up files</string>
    
    <string name="settings_header_cloud_providers">Cloud providers</string>
    <string name="settings_header_paths">Paths</string>
    
	<string name="no_google_play_on_device">Google Play is not up to date on the device. Please update it before using this app.</string>
	
	<string name="choose_account_title">Choose an account</string>
	<string name="cancel">Cancel</string>
	<string name="ok">OK</string>
	
	<string name="select_google_photo_album">Select album</string>
	
</resources>